--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "@material-ui/core": "^5.0.0-alpha.27",
+    "@material-ui/core": "5.0.0-alpha.28",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -34,11 +34,11 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "cross-env": "^7.0.3",
-    "electron": "^12.0.1",
+    "electron": "^12.0.2",
     "electron-builder": "^22.10.5",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-react": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1",
     "html-webpack-plugin": "^5.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
@@ -46,7 +46,7 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
     "wait-on": "^5.3.0",
-    "webpack": "^5.27.2",
+    "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^4.0.0-beta.1"
   },
