--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -2,13 +2,51 @@ name: Action Sample
 
 on:
   push:
-    branches:
-      - main
+    tags:
+    - "v[0-9].[0-9]+.[0-9]+"
   workflow_dispatch:
 
 jobs:
-  print-hello-world:
-    runs-on: ubuntu-latest
+  build_on_mac:
+    runs-on: macos-latest
     steps:
-      - name: execute echo command
-        run: echo "Hello World!"
+    - uses: actions/checkout@v2
+    - name: Use Node.js 16.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: 16.x
+    - name: Install dependencies
+      run: npm install
+    - name: Build application
+      run: npm run package
+    - name: Create release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        draft: true
+        files: |
+          packages/**/*.app
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build_on_win:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js 16.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: 16.x
+    - name: Install dependencies
+      run: npm install
+    - name: Build application
+      run: npm run package
+    - name: Create release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        draft: true
+        files: |
+          packages/**/*.exe
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
