--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -18,8 +18,19 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16.x
-      - name: Build and release application
-        uses: samuelmeuli/action-electron-builder@v1.6.0
+      - name: Install dependencies
+        run: npm install
+      - name: Publish
+        run: npm run package
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          name: ${{ matrix.os }}
+          path: packages
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          files: "packages/**"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
