--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           name: ${{ matrix.os }}
           path: packages/*.dmg
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Release
       #   uses: softprops/action-gh-release@v1
       #   if: startsWith(github.ref, 'refs/tags/v')
