--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -4,35 +4,49 @@ on:
   push:
     tags:
       - "v[0-9].[0-9]+.[0-9]+"
+  workflow_dispatch:
 
 jobs:
-  release:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-latest]
+  # build_on_mac:
+  #   runs-on: macos-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Use Node.js 16.x
+  #     uses: actions/setup-node@v1
+  #     with:
+  #       node-version: 16.x
+  #   - name: Install dependencies
+  #     run: npm install
+  #   - name: Build application
+  #     run: npm run package
+  #   - name: Create release
+  #     uses: softprops/action-gh-release@v1
+  #     if: startsWith(github.ref, 'refs/tags/')
+  #     with:
+  #       draft: true
+  #       files: |
+  #         packages/**/*.app
+  #     env:
+  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build_on_win:
+    runs-on: windows-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Use Node.js 16.x
         uses: actions/setup-node@v1
         with:
           node-version: 16.x
       - name: Install dependencies
         run: npm install
-      - name: Publish
+      - name: Build application
         run: npm run package
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2.3.1
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: ${{ matrix.os }}
-          path: packages/*.dmg
+          draft: true
+          files: |
+            packages/**/*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Release
-      #   uses: softprops/action-gh-release@v1
-      #   if: startsWith(github.ref, 'refs/tags/v')
-      #   with:
-      #     files: "packages/**"
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
