--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -41,6 +41,8 @@ jobs:
         run: npm install
       - name: Build application
         run: npm run package
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
