--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -7,29 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  # build_on_mac:
-  #   runs-on: macos-latest
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Use Node.js 16.x
-  #     uses: actions/setup-node@v1
-  #     with:
-  #       node-version: 16.x
-  #   - name: Install dependencies
-  #     run: npm install
-  #   - name: Build application
-  #     run: npm run package
-  #   - name: Create release
-  #     uses: softprops/action-gh-release@v1
-  #     if: startsWith(github.ref, 'refs/tags/')
-  #     with:
-  #       draft: true
-  #       files: |
-  #         packages/**/*.app
-  #     env:
-  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  release:
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -46,6 +24,9 @@ jobs:
         run: npm run package
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  release:
+    runs-on: ubuntu-latest
+    steps:
       - name: Create release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
