--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -25,6 +25,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   release:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Create release
