--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -4,21 +4,18 @@ on:
   push:
     tags:
       - "v[0-9].[0-9]+.[0-9]+"
-  workflow_dispatch:
 
 jobs:
-  create_release:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          draft: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # create_release:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Create release
+  #       uses: softprops/action-gh-release@v1
+  #       with:
+  #         draft: true
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build_and_upload:
-    needs: create_release
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -37,7 +34,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ needs.create_release.outputs.tag-name }}
+          draft: true
           files: |
             packages/*.exe
             packages/*.dmg
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
