--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -31,6 +31,7 @@ jobs:
           name: ${{ matrix.os }}
           path: packages
   release:
+    needs: build_and_upload
     runs-on: ubuntu-latest
     steps:
       - name: Release
