--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - "v[0-9].[0-9]+.[0-9]+"
 
 jobs:
-  build_and_upload:
+  release_with_artifacts:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
